// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuestionService createQuestion allows creating a valid FREE question 1`] = `

    QUESTION

    Title: question without tags
    Type: FREE

    Instances: []
    Tags: [,]
    Versions: [
      Description: blabla
      Instances: []
      Options: {
        Choices: null
        Randomized: undefined
        Restrictions: {
          Max: 100
          Min: 10
          Type: RANGE
        }
      }
    ]
  
`;

exports[`QuestionService createQuestion allows creating a valid SC question 1`] = `

    QUESTION

    Title: question without tags
    Type: SC

    Instances: []
    Tags: [,]
    Versions: [
      Description: blabla
      Instances: []
      Options: {
        Choices: [{
            Correct: false
            Name: option1
          },{
            Correct: true
            Name: option2
          }
        ]
        Randomized: true
        Restrictions: null
      }
    ]
  
`;
